public abstract class Building extends PlaceableEntity {

    public Building() {
        super();
    }

}