public class EffectDTO {
    public int budget;
    public int population;
    public int pollution;
    public int happiness;
}