public abstract class Infrastructure extends PlaceableEntity {


    public Infrastructure() {
        super();
    }



}