@startuml

' ======================
' Classi
' ======================

class City 
class CityGrid 
class Cell 
class CityState
abstract class PlaceableEntity
abstract class Building
abstract class Infrastructure
class ResidentialBuilding
class CommercialBuilding
class IndustrialBuilding
class Park
class Road
class PowerPlant
class Effect 
interface Policy
class EnvironmentalTaxPolicy
class IndustrialExpansionPolicy
class PlacementRules   
class TickEngine 

' =========================
' Ereditarietà e Relazioni
' =========================

City "1" *-- "1" CityGrid : contains
City "1" *-- "1" CityState : owns
City "0..1" --> "0..1" Policy : activates


CityGrid "1" *-- "1..*" Cell : composed of
Cell "0..1" -- "0..1" PlaceableEntity : hosts
PlaceableEntity "1" --> "1" Effect : produces

PlaceableEntity <|-- Building
PlaceableEntity <|-- Infrastructure

Building <|-- ResidentialBuilding
Building <|-- IndustrialBuilding
Building <|-- CommercialBuilding

Infrastructure <|-- PowerPlant
Infrastructure <|-- Park
Infrastructure <|-- Road

Policy <|.. EnvironmentalTaxPolicy
Policy <|.. IndustrialExpansionPolicy

City ..> PlacementRules : uses

TickEngine --> City : advances
TickEngine ..> CityGrid : uses
TickEngine ..> CityState : updates
PlacementRules ..> CityGrid : uses


' =========================
' Note
' =========================
note left of Effect
Modifiche applicate alla città.
Il costo di costruzione viene applicato una
sola volta durante il posizionamento.
end note

note top of Policy
Le policy alterano gli effetti
delle entità piazzate.
end note

note left of ResidentialBuilding
  Necessita di una PowerPlant
  entro 2 celle.
end note

@enduml
